--- a/package.json
+++ b/package.json
@@ -1,29 +1,42 @@
 {
-  "name": "com-form",
-  "version": "1.0.0",
-  "description": "A form based on React & node",
+  "name": "material-ui",
+  "version": "0.0.0",
+  "description": "demo",
   "main": "index.js",
+  "dependencies": {
+    "express": "^4.13.4",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-tap-event-plugin": "^0.2.2",
+    "material-ui": "^0.15.0-alpha.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-native-modules": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.0",
+    "babel-preset-stage-1": "^6.3.13",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.8.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "Norn Chronos",
-  "license": "MIT",
-  "dependencies": {
-    "history": "^1.13.1",
-    "radium": "^0.15.3",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-motion": "^0.3.1",
-    "react-router": "^1.0.0",
-    "redux": "^3.0.4",
-    "webpack": "^1.12.6"
+  "repository": {
+    "type": "git",
+    "url": "none"
   },
-  "devDependencies": {
-    "eslint": "^1.10.1",
-    "eslint-plugin-react": "^3.10.0",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.5.0"
-  }
+  "keywords": [
+    "react"
+  ],
+  "author": "Norn Chronos",
+  "license": "MIT"
 }
