--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.13.4",
+    "material-ui": "^0.15.0-alpha.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.1",
     "react-tap-event-plugin": "^0.2.2",
-    "material-ui": "^0.15.0-alpha.2"
+    "redux": "^3.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
