--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "express": "^4.13.4",
     "material-ui": "^0.15.0-alpha.2",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
     "react-tap-event-plugin": "^0.2.2",
     "redux": "^3.3.1"
@@ -34,10 +34,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "none"
+    "url": "https://github.com/OshotOkill/com-form"
   },
   "keywords": [
-    "react"
+    "react",
+    "redux",
+    "react-router",
+    "material-ui"
   ],
   "author": "Norn Chronos",
   "license": "MIT"
