--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
-    "redux": "^3.4.0"
+    "redux": "^3.4.0",
+    "socket.io": "^1.4.5"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
