--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.4.0",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
