--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.15.0-beta.2",
     "node-mysql": "^0.4.2",
     "react": "^15.0.1",
