--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "style-loader": "^0.13.1",
@@ -38,6 +39,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cross-env BABEL_ENV=cjs NODE_ENV=production webpack --config webpack.config.prod.js",
     "start": "node server.js"
   },
   "repository": {
@@ -47,8 +49,10 @@
   "keywords": [
     "react",
     "redux",
+    "react-redux",
     "react-router",
-    "material-ui"
+    "material-ui",
+    "socket.io"
   ],
   "author": "Norn Chronos",
   "license": "MIT"
