--- a/.babelrc
+++ b/.babelrc
@@ -7,9 +7,9 @@
 
   "env": {
     "development": {
-      "presets": [
-        "react-hmre"
-      ]
+      // "presets": [
+      //   "react-hmre"
+      // ]
     }  
   }
   
