--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.7.2",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
@@ -39,8 +40,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env BABEL_ENV=cjs NODE_ENV=production webpack --config webpack.config.prod.js",
-    "start": "node server.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "start": "babel node server/index.js"
   },
   "repository": {
     "type": "git",
