--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
+    "better-npm-run": "0.0.8",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
     "react-isomorphic-render": "^2.1.32",
     "react-router": "^2.4.0",
     "style-loader": "^0.13.1",
@@ -44,7 +46,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:production": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
-    "start": "babel node server/index.js"
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
