--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:production": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "start": "node server/index.js",
-    "dev": "concurrent --kill-others \"npm run watch-client\" \"npm run dev-server\" ",
+    "dev": "concurrently --kill-others \"npm run watch-client\" \"npm run dev-server\" ",
     "dev-server": "better-npm-run dev-server",
     "watch-client": "better-npm-run watch-client"
   },
