--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "body-parser": "^1.15.0",
     "compression": "^1.6.1",
     "cookie-parser": "^1.4.1",
+    "cors": "^2.7.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.15.0",
+    "multer": "^1.1.0",
     "node-mysql": "^0.4.2",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
