--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.4.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
+    "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
