--- a/package.json
+++ b/package.json
@@ -2,21 +2,56 @@
   "name": "material-ui",
   "version": "0.0.0",
   "description": "demo",
-  "main": "index.js",
+  "main": "server/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OshotOkill/com-form"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:production": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "start": "node server/index.js",
+    "dev": "concurrently --kill-others \"npm run watch-client\" \"npm run dev-server\" ",
+    "dev-server": "better-npm-run dev-server",
+    "watch-client": "better-npm-run watch-client"
+  },
+  "betterScripts": {
+    "dev-server": {
+      "command": "node ./server/index.js",
+      "env": {
+        "NODE_ENV": "development",
+        "PORT": 3000
+      }
+    },
+    "watch-client": {
+      "command": "node ./webpack-dev-server.js",
+      "env": {
+        "NODE_ENV": "development",
+        "PORT": 3001
+      }
+    }
+  },
   "dependencies": {
     "body-parser": "^1.15.0",
+    "compression": "^1.6.1",
     "cookie-parser": "^1.4.1",
+    "cors": "^2.7.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "isomorphic-fetch": "^2.2.1",
-    "material-ui": "^0.15.0-beta.2",
+    "material-ui": "^0.15.0",
+    "multer": "^1.1.0",
     "node-mysql": "^0.4.2",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
+    "react-router-redux": "^4.0.4",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.4.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
+    "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
@@ -24,27 +59,23 @@
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-native-modules": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "better-npm-run": "0.0.8",
+    "concurrently": "^2.0.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
+    "react-router": "^2.4.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env BABEL_ENV=cjs NODE_ENV=production webpack --config webpack.config.prod.js",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/OshotOkill/com-form"
+    "webpack-hot-middleware": "^2.10.0",
+    "webpack-isomorphic-tools": "^2.2.50"
   },
   "keywords": [
     "react",
