--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:production": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
-    "start": "node server/index.js",
+    "start": "node server.js",
     "dev": "concurrently --kill-others \"npm run watch-client\" \"npm run dev-server\" ",
     "dev-server": "better-npm-run dev-server",
     "watch-client": "better-npm-run watch-client"
@@ -44,9 +44,11 @@
     "node-mysql": "^0.4.2",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-motion": "^0.4.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
+    "react-swipeable-views": "^0.6.2",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.4.0",
     "redux-logger": "^2.6.1",
