Add decorator & class properties

--- a/.babelrc
+++ b/.babelrc
@@ -11,9 +11,11 @@
         "react-hmre"
       ]
     }  
-  }
+  },
   
-  // "plugins": [
-    
-  // ]
+  "plugins": [
+    "transform-decorators-legacy",
+    "syntax-class-properties",
+    "transform-class-properties"
+  ]
 }
